adding head styling

--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
 
 </head>
 <body>
-    
+    <header>
+        <a href="#">
+            <img src="./assets/logo.svg" alt="logo do snitap patins">
+        </a>
+        <a href="#">
+            <img src="./assets/icons/shopping-bag.svg" alt="ícone de uma bolsa">
+            <span>1</span>
+        </a>
+    </header>
 </body>
 </html>
