--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <img src="./assets/logo.svg" alt="logo do snitap patins">
         </a>
         <a href="#">
-            <img src="./assets/icons/shopping-bag.svg" alt="ícone de uma bolsa">
+            <img src="./assets/icons/shopping-bag.svg" alt="ícone de uma bolsa de compras">
             <span>1</span>
         </a>
     </header>
@@ -34,6 +34,19 @@
                     <span>radical</span>
                 </div>
             </h1>
+
+            <div class="buttons">
+                <a href="#" class="button buy shadow">
+                    <img src="./assets/icons/shopping-bag.svg" alt="ícone de uma bolsa de compras">
+                    COMPRAR AGORA
+                </a>
+                <a href="#" class="button play">
+                    <span class="shadow">
+                        <img src="./assets/icons/play.svg" alt="ícone de play">
+                    </span>
+                    VEJA EM AÇÃO
+                </a>
+            </div>
         </div>
     </section>
 </body>
