feature: animated hero section

--- a/index.html
+++ b/index.html
@@ -48,6 +48,14 @@
                 </a>
             </div>
         </div>
+        <div>
+            <div class="content">
+                <img src="./assets/hero/ellipse.svg" alt="imagem de círulo azul">
+                <img src="./assets/hero/patins-image.png" alt="imagem de patins">
+                <img src="./assets/hero/stars-1.svg" alt="imagem de uma estrela">
+                <img src="./assets/hero/stars-2.svg" alt="imagem de uma estrela">
+            </div>
+        </div>
     </section>
 </body>
 </html>
