feature: adding animated banner

--- a/index.html
+++ b/index.html
@@ -57,5 +57,27 @@
             </div>
         </div>
     </section>
+    <section class="banner">
+        <div class="scroller bg-gradient-animate">
+            <div class="rolling">
+                <img src="./assets/banner.svg" alt="palavra patins">
+                <img src="./assets/banner.svg" alt="palavra patins">
+                <img src="./assets/banner.svg" alt="palavra patins">
+                <img src="./assets/banner.svg" alt="palavra patins">
+                <img src="./assets/banner.svg" alt="palavra patins">
+                <img src="./assets/banner.svg" alt="palavra patins">
+                <img src="./assets/banner.svg" alt="palavra patins">
+                <img src="./assets/banner.svg" alt="palavra patins">
+                <img src="./assets/banner.svg" alt="palavra patins">
+                <img src="./assets/banner.svg" alt="palavra patins">
+                <img src="./assets/banner.svg" alt="palavra patins">
+                <img src="./assets/banner.svg" alt="palavra patins">
+                <img src="./assets/banner.svg" alt="palavra patins">
+                <img src="./assets/banner.svg" alt="palavra patins">
+                <img src="./assets/banner.svg" alt="palavra patins">
+                <img src="./assets/banner.svg" alt="palavra patins">
+            </div>
+        </div>
+    </section>
 </body>
 </html>
