feature: styling gallery

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 </head>
 <body>
-    <header>
+    <header class="top">
         <a href="#">
             <img src="./assets/logo.svg" alt="logo do snitap patins">
         </a>
@@ -77,6 +77,43 @@
                 <img src="./assets/banner.svg" alt="palavra patins">
                 <img src="./assets/banner.svg" alt="palavra patins">
             </div>
+        </div>
+    </section>
+
+    <section class="gallery">
+        <header>
+            <span>GALERIA DE FOTOS</span>
+            <h2>#usesnitap por aí</h2>
+        </header>
+        <div class="content">
+            <figure>
+                <img src="./assets/images/01.png" alt="">
+                <figcaption>
+                    <img src="./assets/images/randon_person.jpeg" alt="">
+                    <span>@radon_person</span>
+                </figcaption>
+            </figure>
+            <figure data-delay>
+                <img src="./assets/images/02.png" alt="">
+                <figcaption>
+                    <img src="./assets/images/randon_person.jpeg" alt="">
+                    <span>@radon_person</span>
+                </figcaption>
+            </figure>
+            <figure>
+                <img src="./assets/images/03.png" alt="">
+                <figcaption>
+                    <img src="./assets/images/randon_person.jpeg" alt="">
+                    <span>@radon_person</span>
+                </figcaption>
+            </figure>
+            <figure data-delay>
+                <img src="./assets/images/04.png" alt="">
+                <figcaption>
+                    <img src="./assets/images/randon_person.jpeg" alt="">
+                    <span>@radon_person</span>
+                </figcaption>
+            </figure>
         </div>
     </section>
 </body>
